--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -120,14 +120,15 @@ en:
       membership_history: 'membership history'
       election_history: 'election history'
       roles: 'roles'
-      held_currently: 'Held currently'
-      held_in: 'Held in the last'
       show_history: 'Show history'
-      years: 'years'
       check_mp: 'Check if %{name} is your MP'
       check_mp_alternative: 'Check if this is your MP'
       correct_mp: '%{name} is the MP for the postcode entered.'
       incorrect_mp: '%{name} is not the MP for the postcode entered.  Your MP is '
+    timeline:
+      held_currently: 'Held currently'
+      held_in: 'Held in the last'
+      years: 'years'
     image:
       figcaption: 'The official MP portraits are %{link}'
       available_download: 'available to download'
