--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -447,6 +447,10 @@ en:
     lookup_unavailable: 'postcode check is currently unavailable.'
     postcode_invalid: "we couldn't find the postcode you entered."
     no_mp: "We couldn't find an MP for that postcode.  Your constituency is"
+  # questions translations
+  questions:
+    show:
+      mp_for: 'MP for'
   # people translations
   people:
     index:
